--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "homepage": "https://monojmkd.github.io/taazakhabar-news",
-  "name": "newseveryday-react",
+  "name": "taazakhabar-news",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
