changed packagelock.json name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://monojmkd.github.io/taazakhabr-news",
-  "name": "taazakhabr-news",
+  "name": "taazakhabar-news",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
